// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Item /> should render as a button when no href, but a click handler is passed to the props 1`] = `
<MoreMenuItem
  href={null}
  label="Item Label"
  onClick={[Function]}
>
  <button
    className="css-1czs3p1"
    onClick={[Function]}
  >
    <Translate
      className=""
      params={Object {}}
      string="Item Label"
    >
      <span
        className=""
      >
        Item Label
      </span>
    </Translate>
  </button>
</MoreMenuItem>
`;

exports[`<Item /> should render as a link when an href is passed to the props 1`] = `
<MoreMenuItem
  href="/some/link"
  label="Item Label"
  onClick={null}
>
  <Link
    className="css-1czs3p1"
    href="/some/link"
  >
    <div>
      <Translate
        className=""
        params={Object {}}
        string="Item Label"
      >
        <span
          className=""
        >
          Item Label
        </span>
      </Translate>
    </div>
  </Link>
</MoreMenuItem>
`;
